Made the solar panel and sun interact better so that there is a steady stream of E's at the output of the panel.
Fixed the "jittery E's" problem.
# 0.00.33 (72466) Mar 11, 2013
3/11/13 Publishing to dev for review
Permanently removed code for ice in the beaker.
Made the emission of energy chunks from the sun a little less random so that the solar panel has a steadier energy output.
Added algorithm to prevent clumping of energy chunks in the solar panel.
Fixed issue where the energy chunks would clump up as they emerged from the teapot.
Fixed issue where the "hidden" energy chunks were not being removed from generator on deactivation or reset.
Fixed issue where reset on 2nd tab wasn't clearing steam from beaker.
Fixed an issue where the beaker on the 2nd tab was unable to make it all the way to the boiling point.
Changed the background colors to be consistent on both tabs.
Fixed an issue where energy chunks would appear to "thin out" at the surface of the water when boiling occurred.
Prevented energy chunks from moving through walls of the beaker when emitted from the water.
Made the energy chunks that are emitted to the air come from a random location towards the top of the energy container, and not always from the center top.
Added ability to sense the temperature of the steam emitted from the beaker when it is at or near boiling.
# 0.00.32 (71853) Jan 24, 2013
1/24/13 Deploy to dev for review.
Made temperature of ice in bucket equal the freezing point of water, since now the min temperature is limited to that value.
Removed freezing of the water.
Added a production rate and associated calculations for steam so that fast forward will work.
Made steam go away on reset.
Fixed issues with z-order and steam.
Changed implementation of steam coming from the beaker when water boils.
# 0.00.31 (71741) Jan 16, 2013
1/16/13 Deploying to dev for review by dev team.
Changed the background color.