@@ -1,3 +1,4 @@
+Fixed an issue where energy chunks would appear to turn around after being pulled out of an object on the burner.
 Made the solar panel and sun interact better so that there is a steady stream of E's at the output of the panel.
 Fixed the "jittery E's" problem.
 # 0.00.33 (72466) Mar 11, 2013
